<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_drops"
        android:icon="@drawable/ic_fire"
        android:title="@string/menu_drops" />

    <item
        android:id="@+id/navigation_catalog"
        android:icon="@drawable/ic_search"
        android:title="@string/menu_catalog"/>

    <item
        android:id="@+id/navigation_favourites"
        android:icon="@drawable/ic_heart"
        android:title="@string/menu_favourites"/>

    <item
        android:id="@+id/navigation_basket"
        android:icon="@drawable/ic_bag"
        android:title="@string/menu_basket" />

    <item
        android:id="@+id/navigation_radar"
        android:icon="@drawable/ic_radar"
        android:title="@string/menu_radar" />

</menu>