<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/favourites_absence_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/favorites_absence_title"
        style="@style/TitleTextViewSecond.Black"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:text="@string/favorites_absence_title"
        app:layout_constraintBottom_toTopOf="@+id/favorites_absence_description"
        app:layout_constraintEnd_toEndOf="@id/button_recently_viewed"
        app:layout_constraintStart_toStartOf="@+id/button_recently_viewed" />

    <TextView
        android:id="@+id/favorites_absence_description"
        style="@style/SimpleTextViewFirst.Black"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/favorites_absence_description"
        app:layout_constraintBottom_toTopOf="@+id/button_recently_viewed"
        app:layout_constraintEnd_toEndOf="@+id/button_recently_viewed"
        app:layout_constraintStart_toStartOf="@+id/button_recently_viewed" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_recently_viewed"
        style="@style/BorderButton.Black"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:background="@drawable/black_border"
        android:text="@string/button_recently_viewed_products"
        app:layout_constraintBottom_toTopOf="@+id/recycler_view_recently_viewed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TouchTargetSizeCheck"
        tools:visibility="invisible" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_recently_viewed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/button_make_purchases"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_make_purchases"
        style="@style/BorderButton.White"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:text="@string/button_make_purchases"
        app:icon="@drawable/ic_next"
        app:iconGravity="end"
        app:iconSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button_recently_viewed"
        app:layout_constraintStart_toStartOf="@+id/button_recently_viewed" />

</androidx.constraintlayout.widget.ConstraintLayout>