<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/main_toolbar"
        layout="@layout/main_toolbar" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.SearchView
                android:id="@+id/search_view"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@drawable/horizontal_borders"
                app:layout_scrollFlags="scroll|snap" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/categories_tab_layout"
                android:layout_width="wrap_content"
                android:layout_height="56dp"
                android:layout_marginStart="16dp"
                app:tabGravity="start"
                app:tabIndicator="@drawable/custom_tab_indicator"
                app:tabIndicatorColor="@color/black"
                app:tabIndicatorFullWidth="false"
                app:tabMode="fixed"
                app:tabTextColor="@color/categories_tabs_selector"
                app:layout_scrollFlags="scroll|snap">

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/woman_categories_tab" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/man_categories_tab" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/children_categories_tab" />
            </com.google.android.material.tabs.TabLayout>

        </com.google.android.material.appbar.AppBarLayout>



        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <include
                layout="@layout/notification_layout"/>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</LinearLayout>
